Aggiunta parse della risposta API